construct URLs via URI